# MetaGraphia

./: README.md  SECURITY-REVIEW.md  USER-STORIES.md  package.json  vite.config.js
backends/: pyproject.toml
backends/stable_diffusion/: README.md  diffusionbee_backend.py
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/lib/components/: AdvancedControls.svelte  DimensionInput.svelte  ImageGenerator.svelte  ProgressTracker.svelte  Settings.svelte
src/lib/stores/: imageGeneration.ts
src/routes/: +page.svelte
