[project]
name = "metagraphia-backends"
version = "0.1.0"
description = "The Python backends for the LLMs."
authors = [
    {name = "Your Name",email = "you@example.com"}
]
license = {text = "AGPL"}
readme = "README.md"
requires-python = "==3.11.13"
dependencies = [
    "scikit-image (>=0.25.2,<0.26.0)",
    "pillow (>=11.3.0,<12.0.0)",
    "regex (>=2024.11.6,<2025.0.0)",
    "scipy (>=1.16.0,<2.0.0)",
    "ftfy (>=6.3.1,<7.0.0)",
    "fickling (>=0.1.3,<0.2.0)",
    "requests (>=2.32.4,<3.0.0)",
    "pyinstaller (>=6.14.1,<7.0.0)",
    "onnxruntime (>=1.22.0,<2.0.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "safetensors (>=0.5.3,<0.6.0)",
    "cython (>=3.1.2,<4.0.0)",
    "numexpr (>=2.11.0,<3.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "keras-nightly (>=3.10.0.dev2025070403,<4.0.0)",
    "tf-nightly (>=2.20.0.dev20250704,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
